# gke-automation

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
src/: main.py
src/gke_automation/: __init__.py  cli.py  config.py  exceptions.py  logging_config.py  manager.py  models.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/environments/dev/: backend.hcl
terraform/environments/prod/: backend.hcl
terraform/modules/gke/: main.tf  outputs.tf  variables.tf
terraform/modules/network/: main.tf  outputs.tf  variables.tf
tests/: test_config.py  test_import.py  test_models.py
