[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gke-automation"
version = "0.1.0"
description = "Typed automation toolkit and CLI for Google Kubernetes Engine clusters"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Abhishek Sawant" }]
keywords = ["gke", "gcp", "kubernetes", "terraform", "automation", "devops"]
dependencies = [
    "google-cloud-container>=2.40",
    "google-auth>=2.30",
    "pydantic-settings>=2.3",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "black>=24.0", "pre-commit>=3.7"]

[project.scripts]
gke-automate = "gke_automation.cli:main"

[project.urls]
Homepage = "https://github.com/abhisheksawant52/gke-automation"
Issues = "https://github.com/abhisheksawant52/gke-automation/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
